--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Visualizing firstname distribution as a bar chart.">
+		<meta name="description" content="Visualizing firstname distribution within the university of Ulm.">
 
 		<title>uulm Vornamen-Statistik</title>
 		<link rel="stylesheet" type="text/css" href="css/jquery.jqplot.min.css">
@@ -16,10 +16,9 @@
 		<script type="text/javascript" src="js/jquery.mobile-1.3.1.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jqplot.min.js"></script>
 
-		<script type="text/javascript" src="js/jqplot.canvasTextRenderer.min.js"></script>
-		<script type="text/javascript" src="js/jqplot.canvasAxisTickRenderer.min.js"></script>
 		<script type="text/javascript" src="js/jqplot.categoryAxisRenderer.min.js"></script>
 		<script type="text/javascript" src="js/jqplot.barRenderer.min.js"></script>
+		<script type="text/javascript" src="js/jqplot.pointLabels.min.js"></script>
 
 		<style type="text/css">
 			#aboutProject {
@@ -50,12 +49,17 @@
 	</head>
 	<body>
 		<div data-role="page">
-			<div data-role="header" data-position="fixed">
-				<h1>uulm Vornamen-Statistik</h1>
+			<div data-role="header" data-position="fixed" style="height:50px;">
+				<div style="float:left;margin:5px;">
+					<img src="img/uulm.png" style="height:40px" />
+				</div>
+
+				<h1 style="font-size:20px;">Vornamen an der Universit&auml;t Ulm (2013)</h1>
 
 				<div>
 					<a href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade" style="position:absolute;top:5px;right:5px;">
-						<img src="img/icon.png" alt="ulmapi" title="Informationen zu diesem Projekt">
+						<img src="img/icon.png" alt="ulmapi" title="Informationen zu diesem Projekt"
+						/>
 					</a>
 				</div>
 			</div>
@@ -65,7 +69,7 @@
 				<h3>&Uuml;ber dieses Projekt</h3>
 				<div style="float:right; margin-left: 15px;">
 					<a href="http://ulmAPI.de/" tabindex="-1" title="Hochschulgruppe 'datalove' für offene Daten an der Uni Ulm">
-						<img src="img/ulmapi.png" width="100" alt="ulmAPI.de" title="Hochschulgruppe für offene Daten an der Uni Ulm">
+						<img src="img/ulmapi.png" width="100" alt="ulmAPI.de" title="Hochschulgruppe für offene Daten an der Uni Ulm" />
 					</a>
 				</div>
 				<p>
@@ -95,13 +99,21 @@
 				</div>
 			</div>
 
-			<div data-role="content" style="padding:0px;">
-				<div id="pie" style="width: 100%;"></div>
-				<div data-role="rangeslider">
-					<label for="range-1a">Anzahl vorkommnise:</label>
-					<input name="range-1a" id="range-1a" min="0" max="200" value="135" type="range">
-					<label for="range-1b">Anzahl vorkommnise:</label>
-					<input name="range-1b" id="range-1b" min="0" max="250" value="250" type="range">
+			<div data-role="content" style="padding:0px;margin:20px;">
+				<div id="pie" style="width:85%;float:right;"></div>
+
+			
+				<div style="width:100%;float:left;clear:both;margin-top:30px;">
+					<div style="width:15%;float:left;text-align:center;margin-top:-15px;">
+						<h3 style="margin-top:9px;padding-right:10px;">
+							Dargestellter Bereich:<br/>
+							(von/bis)
+						</h3>
+					</div>
+					<div data-role="rangeslider" style="float:right;width:85%;">
+						<input name="range-1a" id="range-1a" min="0" max="200" value="100" type="range">
+						<input name="range-1b" id="range-1b" min="0" max="250" value="250" type="range">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -117,15 +129,20 @@
 
 					for (var i = 0; i < data.length; i++) {
 						if (data[i][1] >= min && data[i][1] <= max) {
-							arr[arr.length] = [data[i][0] + " (" + data[i][1] + ")", data[i][1]];
+							//arr[arr.length] = [data[i][0] + " (" + data[i][1] + ")", data[i][1]];
+							arr[arr.length] = [
+								data[i][1]
+								, data[i][0] + " (" + data[i][1] + ")"
+							];
 						}
 					}
+					console.log(arr);
 					plot1.replot({data:[arr]});
 				}
 			}
 			$(document).ready(function(){
 				$(window).resize(function() {
-					$("#pie").height($(window).height() - 130);
+					$("#pie").height($(window).height() - 170);
 					if (plot1) {
 						plot1.replot();
 					}
@@ -135,17 +152,15 @@
 				$("#range-1b").change(recalcData);
 
 				plot1 = $.jqplot('pie', [[['Loading Data...', 0]]], {
-					series:[{renderer:$.jqplot.BarRenderer}],
-					axesDefaults: {
-						tickRenderer: $.jqplot.CanvasAxisTickRenderer,
-						tickOptions: {
-							angle: -90,
-							fontSize: '10pt'
-						}
+					seriesDefaults: {
+						 rendererOptions: { barDirection: 'horizontal' }
+						, renderer: $.jqplot.BarRenderer
+						, pointLabels: { show: true, location: 'e', edgeTolerance: -15 }
+						, shadowAngle: 135
 					},
 					axes: {
-						xaxis: {
-							renderer: $.jqplot.CategoryAxisRenderer,
+						yaxis: {
+							renderer: $.jqplot.CategoryAxisRenderer
 						}
 					}
 				});
