--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 					<img src="img/uulm.png" style="height:40px" />
 				</div>
 
-				<h1 style="font-size:20px;">Vornamen an der Universit&auml;t Ulm (2013)</h1>
+				<div style="position:absolute;top:0px;left:0px;width:100%;z-index:99;text-align:center;">
+					<h1 style="font-size:20px;">Vornamen an der Universit&auml;t Ulm (2013)</h1>
+				</div>
 
 				<div>
 					<a href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade" style="position:absolute;top:5px;right:5px;">
@@ -106,8 +108,7 @@
 				<div style="width:100%;float:left;clear:both;margin-top:30px;">
 					<div style="width:15%;float:left;text-align:center;margin-top:-15px;">
 						<h3 style="margin-top:9px;padding-right:10px;">
-							Dargestellter Bereich:<br/>
-							(von/bis)
+							Dargestellter Bereich:
 						</h3>
 					</div>
 					<div data-role="rangeslider" style="float:right;width:85%;">
@@ -142,7 +143,7 @@
 			}
 			$(document).ready(function(){
 				$(window).resize(function() {
-					$("#pie").height($(window).height() - 170);
+					$("#pie").height($(window).height() - 190);
 					if (plot1) {
 						plot1.replot();
 					}
