--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="css/github-btn.css">
 
 		<!--[if lt IE 9]><script language="javascript" type="text/javascript" src="js/excanvas.min.js"></script><![endif]-->
-		<script type="text/javascript" src="data.js"></script>
+		<script type="text/javascript" src="js/data.js"></script>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="js/jquery.mobile-1.3.1.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jqplot.min.js"></script>
@@ -137,7 +137,7 @@
 							];
 						}
 					}
-					console.log(arr);
+					//console.log(arr);
 					plot1.replot({data:[arr]});
 				}
 			}
