--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				</div>
 			</div>
 
-			<div data-role="content">
+			<div data-role="content" style="overflow:visible;">
 					<div class="ui-widget" data-role="fieldcontain">
 					<div data-role="rangeslider">
 						<label for="range-1a">Dargestellter Bereich:</label>
