--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</div>
 
 					<div class="ui-widget" data-role="fieldcontain">
-						<label for="searchField">Direkte Anzeige eines Namens:</label>
+						<label for="searchField">Suche nach Name:</label>
 						<input id="searchField" />
 						<ul id="suggestions" data-role="listview" data-inset="true"></ul>
 
@@ -113,10 +113,10 @@
 			</div>
 			<div data-role="footer" class="ui-bar-c" style="background:none;margin-top:10px;border:none;text-align:right;padding-right:1em;">
 				<a data-role="button" href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade">
-					<img src="img/uulm.png" style="height:32px" />
+					<img src="img/uulm.png" style="height:27px" />
 				</a>
 				<a data-role="button" href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade">
-					<img src="img/icon.png" alt="ulmapi" title="Informationen zu diesem Projekt" />
+					<img src="img/icon.png" alt="ulmapi" style="height:27px" title="Informationen zu diesem Projekt" />
 				</a>
 			</div>
 		</div>
