--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
 				/* build autocomplete stuff */
 				var availableNames = [];
 
-				for (var i = 0; i < data.length; i++) {
+				/* traverese the array in reverse, 
+				so that the first results in the 
+				autocomplete field have most matches */
+				for (var i = data.length-1; i >= 0; i--) {
 					availableNames.push(data[i][0] + " (" + data[i][1] + ")");
 				}
 
