minor text adaptions, adapted description of data source

--- a/index.html
+++ b/index.html
@@ -55,14 +55,20 @@
 					</a>
 				</div>
 				<p>
-					Dominik hat beim OpenCityCamp 2013 spontan die Idee bekommen, 
-					die Vornamen der Studierenden der Universität Ulm zu visualisieren. 
-					Wenige Stunden später enstand diese kleine Web-App.
+					Dominik hatte beim <a href="http://ulmApi.de">OpenCityCamp 2013</a> 
+					spontan die Idee, die Vornamen der Studierenden der Universität Ulm 
+					zu visualisieren. Wenige Stunden später enstand diese kleine Web-App.
 				</p>
 				<p>
 					Leider haben wir es einige Monate nicht geschafft diese final zu
 					ver&ouml;ffentlichen, so dass Michi sich Ende Oktober hingesetzt hat um
-					den Feinschliff zu machen und die Daten zu aktualisieren.
+					den Feinschliff zu machen, die App etwas zu erweitern und die Daten 
+					zu aktualisieren.
+				</p>
+				<p>
+					Der Datensatz besteht &mdash; Stand Oktober 2013 &mdash; aus 13925
+					Eintr&auml;gen. Die Daten stammen aus den Unix-Systemen des 
+					Kommunikations- und Informationszentrums der Uni Ulm (kiz).
 				</p>
 
 				<p>
@@ -115,9 +121,9 @@
 			</div>
 			<div data-role="footer" class="ui-bar-c" style="background:none;margin-top:10px;border:none;text-align:right;padding-right:1em;">
 				<a data-role="button" href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade">
-					<img src="img/uulm.png" style="height:27px" />
+					<img src="img/uulm.png" style="height:27px;" />
 				</a>
-				<a data-role="button" href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade">
+				<a data-mini="true" data-role="button" href="#aboutProject" data-rel="popup" data-position-to="window" data-transition="fade">
 					<img src="img/icon.png" alt="ulmapi" style="height:27px" title="Informationen zu diesem Projekt" />
 				</a>
 			</div>
