minor text update

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
 					zu visualisieren. Wenige Stunden später enstand diese kleine Web-App.
 				</p>
 				<p>
-					Leider haben wir es einige Monate nicht geschafft diese final zu
+					Leider haben wir es einige Monate nicht geschafft diese richtig zu
 					ver&ouml;ffentlichen, so dass Michi sich Ende Oktober hingesetzt hat um
-					den Feinschliff zu machen, die App etwas zu erweitern und die Daten 
-					zu aktualisieren.
+					das Projekt zu aktualisieren und etwas zu erweitern.
 				</p>
 				<p>
 					Der Datensatz besteht &mdash; Stand Oktober 2013 &mdash; aus 13925
