fixed typography mistake: &mdash; -> &ndash;

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					das Projekt zu aktualisieren und etwas zu erweitern.
 				</p>
 				<p>
-					Der Datensatz besteht &mdash; Stand Oktober 2013 &mdash; aus 13925
+					Der Datensatz besteht &ndash; Stand Oktober 2013 &ndash; aus 13925
 					Eintr&auml;gen. Die Daten stammen aus den Unix-Systemen des 
 					Kommunikations- und Informationszentrums der Uni Ulm (kiz).
 				</p>
