name patch by dome

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</a>
 				</div>
 				<p>
-					Dominik hatte beim <a href="http://ulmApi.de">OpenCityCamp 2013</a> 
+					Dome hatte beim <a href="http://ulmApi.de">OpenCityCamp 2013</a> 
 					spontan die Idee, die Vornamen der Studierenden der Universität Ulm 
 					zu visualisieren. Wenige Stunden später enstand diese kleine Web-App.
 				</p>
