added note: only firstname is taken into account

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 					Der Datensatz besteht &ndash; Stand Oktober 2013 &ndash; aus 13925
 					Eintr&auml;gen. Die Daten stammen aus den Unix-Systemen des 
 					Kommunikations- und Informationszentrums der Uni Ulm (kiz).
+					Es ist jeweils nur der erste Vorname ber&uuml;cksichtigt
+					worden.
 				</p>
 
 				<p>
