updated notes on data-sources

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Visualizing firstname distribution within the university of Ulm.">
 
-		<title>uulm Vornamen-Statistik</title>
+		<title>Visualisierung der Vornamen an der Universit&auml;t Ulm</title>
 		<link rel="stylesheet" type="text/css" href="css/jquery.jqplot.min.css">
 		<link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 		<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.2.min.css">
@@ -65,10 +65,23 @@
 					ver&ouml;ffentlichen, so dass Michi sich Ende Oktober hingesetzt hat um
 					das Projekt zu aktualisieren und etwas zu erweitern.
 				</p>
+
+				<p>&nbsp;</p>
+
+				<h3>Datens&auml;tze</h3>
 				<p>
 					Der Datensatz f&uuml;r die Vornamen
 					besteht &ndash; Stand Oktober 2013 &ndash; aus 19126
 					Eintr&auml;gen (Studierende, Mitarbeiter, Studentenwerk, Externe, etc.). 
+				</p>
+				<p>
+					Die Daten f&uuml;r die zweiten, dritten und weiteren
+					Vornamen stammen aus einem separaten Datensatz
+					(Benutzer mit kiz-Vollaccount). Dieser
+					ist leider nur eine Teilmenge des Vornamen-Datensatzes.
+				</p>
+
+				<p>
 					Die Daten stammen aus den Unix-Systemen der Uni Ulm.
 					F&uuml;r genauere Infos zur Herkunft am
 					Besten das <a href="https://github.com/UlmApi/uulm-firstname-statistic/blob/gh-pages/Makefile">Makefile</a>
