better semantic description of buttons

--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
 					<div class="ui-grid-a">
 						<div class="ui-block-a">
 							<div class="ui-widget" data-role="fieldcontain">
-								<label for="firstNames">Erste Vornamen anzeigen (Adressdatenbank)</label>
+								<label for="firstNames">Nur erster Vorname (Adressdatenbank)</label>
 								<input id="firstNames" name="furtherNames" value="firstNames" type="radio" checked="checked" />
 							</div>
 						</div>
 
 						<div class="ui-block-b">
 							<div class="ui-widget" data-role="fieldcontain">
-								<label for="furtherNames">Zweite, dritte und weitere Vornamen (kiz-Accounts)</label>
+								<label for="furtherNames">Nur zweite, dritte und weitere Vornamen (kiz-Accounts)</label>
 								<input name="furtherNames" id="furtherNames" type="radio" value="furtherNames" />
 							</div>
 						</div>
