added number of entries to button description

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<p>
 					Die Daten f&uuml;r die zweiten, dritten und weiteren
 					Vornamen stammen aus einem separaten Datensatz
-					(Benutzer mit kiz-Vollaccount). Dieser
+					von 13966 Benutzern mit kiz-Vollaccount. Dieser
 					ist leider nur eine Teilmenge des Vornamen-Datensatzes.
 				</p>
 
@@ -135,14 +135,14 @@
 					<div class="ui-grid-a">
 						<div class="ui-block-a">
 							<div class="ui-widget" data-role="fieldcontain">
-								<label for="firstNames">Nur erster Vorname (Adressdatenbank)</label>
+								<label for="firstNames">Nur erster Vorname (Adressdatenbank, 19126 Eintr&auml;ge)</label>
 								<input id="firstNames" name="furtherNames" value="firstNames" type="radio" checked="checked" />
 							</div>
 						</div>
 
 						<div class="ui-block-b">
 							<div class="ui-widget" data-role="fieldcontain">
-								<label for="furtherNames">Nur zweite, dritte und weitere Vornamen (kiz-Accounts)</label>
+								<label for="furtherNames">Nur zweite, dritte und weitere Vornamen (kiz-Accounts, 13966 Eintr&auml;ge)</label>
 								<input name="furtherNames" id="furtherNames" type="radio" value="furtherNames" />
 							</div>
 						</div>
