--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 				<h3>Datens&auml;tze</h3>
 				<p>
 					Der Datensatz f&uuml;r die Vornamen
-					besteht &ndash; Stand Oktober 2013 &ndash; aus 19126
+					besteht &ndash; Stand Oktober 2013 &ndash; aus 19100
 					Eintr&auml;gen (Studierende, Mitarbeiter, Studentenwerk, Externe, etc.). 
 				</p>
 				<p>
 					Die Daten f&uuml;r die zweiten, dritten und weiteren
 					Vornamen stammen aus einem separaten Datensatz
-					von 13966 Benutzern mit kiz-Vollaccount. Dieser
+					von 13918 Benutzern mit kiz-Vollaccount. Dieser
 					ist leider nur eine Teilmenge des Vornamen-Datensatzes.
 				</p>
 
@@ -120,8 +120,8 @@
 					<div class="ui-widget" data-role="fieldcontain">
 					<div data-role="rangeslider">
 						<label for="range-1a">Dargestellter Bereich:</label>
-						<input name="range-1a" id="range-1a" min="0" max="190" value="110" type="range">
-						<input name="range-1b" id="range-1b" min="0" max="325" value="325" type="range">
+						<input name="range-1a" id="range-1a" min="0" max="300" value="120" type="range">
+						<input name="range-1b" id="range-1b" min="0" max="350" value="350" type="range">
 					</div>
 					</div>
 
@@ -135,14 +135,14 @@
 					<div class="ui-grid-a">
 						<div class="ui-block-a">
 							<div class="ui-widget" data-role="fieldcontain">
-								<label for="firstNames">Nur erster Vorname (Adressdatenbank, 19126 Eintr&auml;ge)</label>
+								<label for="firstNames">Nur erster Vorname (Adressdatenbank, 19100 Eintr&auml;ge)</label>
 								<input id="firstNames" name="furtherNames" value="firstNames" type="radio" checked="checked" />
 							</div>
 						</div>
 
 						<div class="ui-block-b">
 							<div class="ui-widget" data-role="fieldcontain">
-								<label for="furtherNames">Nur zweite, dritte und weitere Vornamen (kiz-Accounts, 13966 Eintr&auml;ge)</label>
+								<label for="furtherNames">Nur zweite, dritte und weitere Vornamen (kiz-Accounts, 13918 Eintr&auml;ge)</label>
 								<input name="furtherNames" id="furtherNames" type="radio" value="furtherNames" />
 							</div>
 						</div>
@@ -224,12 +224,12 @@
 
 			function changedRadio() {
 				if($("[name='furtherNames']:checked").val() === "furtherNames") {
-					$("#range-1a").val(40);
-					$("#range-1b").val(250);
+					$("#range-1a").val(90);
+					$("#range-1b").val(230);
 					recalcData();
 				} else {
-					$("#range-1a").val(110);
-					$("#range-1b").val(325);
+					$("#range-1a").val(120);
+					$("#range-1b").val(350);
 
 					recalcData();
 				}
@@ -249,6 +249,7 @@
 				$("#furtherNames").change(changedRadio);
 
 				plot1 = $.jqplot('chart', [[['Loading Data...', 0]]], {
+					//seriesColors:['#A0B7C4'], #64A2CF
 					seriesDefaults: {
 						 rendererOptions: { barDirection: 'horizontal',
 						 fillToZero: true }
