--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<div class="ui-widget" data-role="fieldcontain">
 					<div data-role="rangeslider">
 						<label for="range-1a">Dargestellter Bereich:</label>
-						<input name="range-1a" id="range-1a" min="0" max="300" value="120" type="range">
+						<input name="range-1a" id="range-1a" min="0" max="300" value="140" type="range">
 						<input name="range-1b" id="range-1b" min="0" max="350" value="350" type="range">
 					</div>
 					</div>
@@ -129,8 +129,8 @@
 						<label for="searchField">Suche nach Name:</label>
 						<input id="searchField" />
 						<ul id="suggestions" data-role="listview" data-inset="true"></ul>
-
 					</div>
+
 
 					<div class="ui-grid-a">
 						<div class="ui-block-a">
@@ -209,26 +209,25 @@
 
 				$("#searchField").autocomplete({
 					source: availableNames,
-						target: $('#suggestions'),
-						callback: function(e) {
-							var $a = $(e.currentTarget);
-							$('#searchField').val($a.text());
-							$("#searchField").autocomplete('clear');
-						},
-
-						link: 'target.html?term=',
-						minLength: 1
+					target: $('#suggestions'),
+					callback: function(e) {
+						var $a = $(e.currentTarget);
+						$('#searchField').val($a.text());
+						$("#searchField").autocomplete('clear');
+					},
+					link: 'target.html?term=',
+					minLength: 1
 
 				});
 			}
 
 			function changedRadio() {
 				if($("[name='furtherNames']:checked").val() === "furtherNames") {
-					$("#range-1a").val(90);
+					$("#range-1a").val(120);
 					$("#range-1b").val(230);
 					recalcData();
 				} else {
-					$("#range-1a").val(120);
+					$("#range-1a").val(140);
 					$("#range-1b").val(350);
 
 					recalcData();
@@ -267,7 +266,9 @@
 					window.location.hash = "";
 					window.location.reload();
 				}
+			});
 
+			$(document).on('pageinit', '#graph-page', function(){ 
 				buildAutocomplete();
 			});
 		</script>
